# armadillin

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: cibuildwheel.yaml
src/armadillin/: __main__.py  helpers_compiled.pyx  input.py  modelling.py  train.py  training_create_small_model.py  training_input.py  training_make_input.py  training_script_create_small_model.py  training_script_do_training.py  training_script_make_filtered_shuffled_files.py
src/armadillin/trained_model/: all_lineages.txt  mask_small.json
