[metadata]
name = armadillin
version = 0.0.1
author = Theo Sanderson
author_email = theo@theo.io
description = Lineage prediction from SARS-CoV-2 sequences
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/theosanderson/armadillin
project_urls =
    Bug Tracker = https://github.com/theosanderson/armadillin/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    tensorflow==2.6.0
    tqdm
    biopython
    tensorflow-model-optimization==0.7.0
    pandas
    numpy


[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    armadillin = armadillin:__main__.main
